# ETF-Control-Engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
config/: calendars.yaml  rules.yaml
data/expected/: sample_exceptions_2026-06-15.csv
data/raw/: corporate_actions_2026-06-15.csv  etf_quotes_2026-06-15.csv  fx_2026-06-15.csv  holdings_2026-06-15.csv  pcf_2026-06-15.csv  prices_2026-06-15.csv  prior_holdings_2026-06-14.csv
docs/: app.js  index.html  styles.css
docs/data/: dashboard_2026-06-15.json
src/etfctl/: __init__.py  cli.py  config.py  engine.py
src/etfctl/controls/: __init__.py  basket_checks.py  corporate_action_checks.py  fx_checks.py  premium_discount_checks.py  price_checks.py  rule_engine.py
src/etfctl/ingest/: __init__.py  file_audit.py  loaders.py  schemas.py
src/etfctl/normalize/: __init__.py  calendars.py  currencies.py  identifiers.py
src/etfctl/pricing/: __init__.py  arbitrage.py  fx.py  nav.py  price_waterfall.py  valuation.py
src/etfctl/reconcile/: __init__.py  pcf_vs_holdings.py  pcf_vs_prior_day.py
src/etfctl/report/: dashboard_data.py  excel_report.py  html_report.py
src/etfctl/report/templates/: exception_report.html.j2
src/etfctl/storage/: __init__.py  ddl.sql  duckdb_client.py
tests/: test_arbitrage.py  test_corporate_actions.py  test_dashboard_data.py  test_fx.py  test_nav.py  test_price_waterfall.py  test_reconciliation.py  test_rule_engine.py
web/public/: app.js  styles.css
web/public/data/: dashboard_2026-06-15.json
