[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-basket-control-engine"
version = "0.1.0"
description = "Synthetic ETF basket operations control engine portfolio project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "jinja2>=3.1.0",
  "openpyxl>=3.1.0",
  "pandas>=2.2.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
  "xlsxwriter>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
etfctl = "etfctl.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
etfctl = ["storage/*.sql", "report/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

